--- a/DeskOS/Info.plist
+++ b/DeskOS/Info.plist
@@ -6,5 +6,13 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>DeskOS behöver åtkomst till lokala nätverk för att kunna ladda webbsidor.</string>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_services._dns-sd._udp</string>
+	</array>
+	<key>NSPrivacyTracking</key>
+	<false/>
 </dict>
 </plist>
