--- a/DeskOS/Info.plist
+++ b/DeskOS/Info.plist
@@ -1,30 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-    <key>UIBackgroundModes</key>
-    <array>
-        <string>remote-notification</string>
-    </array>
-
-    <!-- Required privacy usage descriptions (minimal, valid set) -->
-    <key>NSCameraUsageDescription</key>
-    <string>Camera access is required for capturing photos and video.</string>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>Microphone access is required for audio recording.</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>Photo library access is required to pick and show images.</string>
-    <key>NSPhotoLibraryAddUsageDescription</key>
-    <string>Photo library write access is required to save images.</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Location is used to improve browsing and app features.</string>
-
-    <!-- File access helpers -->
-    <key>UISupportsDocumentBrowser</key>
-    <true/>
-    <key>UIFileSharingEnabled</key>
-    <true/>
-    <key>LSSupportsOpeningDocumentsInPlace</key>
-    <true/>
-</dict>
+<dict/>
 </plist>
